2005-03-27  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* fixed big memory leak caused by missing destructor of user_display
	* removed obsolete data
	* made memory usage / pointer handling more stable by using auto_ptr
	* hacked wild experiments with water bump mapping and shaders
	  (currently disabled).
	* more integration of TDC graphics.

2005-03-14 Andy Rice
	* aegeanconvoy.xml, battleships.xml
	 - submarine starts at periscope depth (to avoid radar detection straight away)	 
	* battleship_malaya.xml, corvette.xml, destroyer_oclass.xml, destoryer_tribal.xml,
	  submarine_IXc40.xml, submarine_VIIc.xml, submarine_XXI.xml
	 - added radar
	 - increased gun initial velocities (which increases there range)	 
	* ai.cpp, game.cpp, game.h, global_data.cpp, global_data.h, sea_object.cpp, sensors.cpp,
	  sensors.h, ship.cpp, ship.h, submarine.cpp, submarine.h, submarine_interface.cpp,
	  submarine_interface.h, user_interface.cpp, user_interface.h
	 - ships and subs now have radar
	 - ai uses radar to detect player
	 - radar contacts displayed in map display
	 - all sensor types cannot detect anything past there range now
	 - sound effects use cache
	 - gun ranges/angles are generated for all initial velocities required 
	   (allows variable gun ranges)
	 - now says why a torpedo could no be fired (i.e. tube reloading)	 
	* english.text, german.text, italian.text
	 - added messages for torpedo tube status
	* README
	 - added deck gun commands

2005-03-13  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* all over the place
	 - substituted system::sys() by just sys()
	* water.cpp water.h
	 - optional usage of fragment programs (pixel shaders)

2005-03-04  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* subsim.cpp
	 - separated system specific main(), makes multiplatform compilation
	   easier, could be used for the other binaries too...

2005-03-02 Andy Rice
	* english.text, german.text, italian.text, submarine_interface.cpp, submarine_interface.h,
	  submarine.cpp, submarine.h