@@ -6,6 +6,7 @@
 
 #include "texture.h"
 #include <vector>
+#include <list>
 
 class image
 {
@@ -17,14 +18,24 @@ protected:
 	std::string name;	// filename
 	unsigned width, height;
 
-	// cache exactly ONE image as textures.
-	static const image* cached_object;
-	static unsigned gltx, glty;	// no. of textures in x and y direction
-	static std::vector<texture*> textures;
+	// caching.
+	struct cache_entry 
+	{
+		const image* object;		// for comparison
+		unsigned time_stamp;	// for cache handling
+		unsigned gltx, glty;	// no. of textures in x and y direction
+		std::vector<texture*> textures;
+		void generate(const image* obj);
+		cache_entry();
+		~cache_entry();
+	};
+
+	// the cache
+	static std::list<cache_entry> cache;
 
 	// create texture(s) from image for faster drawing
-	static void clear_cache(void);
-	static void check_cache(const image* obj);	// store in cache if not already cached
+	// store in cache if not already cached
+	static cache_entry& check_cache(const image* obj);
 
 	// statistics.
 	static unsigned mem_used;
@@ -44,7 +55,10 @@ public:
 	// image is cached there)
 	image(const std::string& s);
 	~image();
+	// draw with caching image in texture memory
 	void draw(int x, int y) const;
+	// draw image by directly copying pixels to the frame buffer
+	void draw_direct(int x, int y) const;
 	// returns 0 if image is stored in texture
 	SDL_Surface* get_SDL_Surface(void) const { return img; }
 	unsigned get_width(void) const { return width; };
