@@ -1,3 +1,8 @@
+2005-04-03  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* added popup handling
+	* added control and TDC popup
+	* introduced new image cache
+
 2005-03-27  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* fixed big memory leak caused by missing destructor of user_display
 	* removed obsolete data
